# ovba

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  tests.yml
docs/: CompressedContainer.md
docs/dev/: CompressedContainer.md
src/: error.rs  lib.rs  main.rs  ooxml.rs  ovba.rs  parser.rs  tests.rs
