[package]
name = "ovba"
version = "0.1.0"
authors = ["Tim Weis <tim.weis@outlook.com>"]
description = "Library for inspecting and extracting data from Office Open XML VBA projects."
edition = "2018"
exclude = [
    ".gitignore",
    "docs/dev/**"
]
license-file = "LICENSE"
repository = "https://github.com/tim-weis/ovba"

[dependencies]
cfb = "0.3"
codepage = "0.1"
encoding_rs = "0.8"
nom = "5.1"
